--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,22 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+**/.tfsec/*
+**/.ignore/*
+
+*.DS_Store
+*.log
+*.h2.db
+settings.json
+__TMP
+.metals/
+*.log
+*.h2.db
+settings.json
+__TMP
+.metals/
+__azurite_*
+/.idea
+
+**/modules/**/.terraform.lock.hcl
