--- a/src/domains/echoserver/assets/openapi_specs/default.yaml
+++ b/src/domains/echoserver/assets/openapi_specs/default.yaml
@@ -4,25 +4,76 @@ info:
   version: "1.0"
 paths:
   /{proxy+}:
+    options:
+      parameters:
+      - name: "proxy"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "200":
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+          content: {}
+      x-amazon-apigateway-integration:
+        type: "mock"
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'https://d3tfwmndqvau80.cloudfront.net'"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        passthroughBehavior: "when_no_match"
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
         in: "path"
         required: true
-        type: "string"
-      responses: {}
+        schema:
+          type: "string"
+      responses:
+        "200":
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+          content: {}
       x-amazon-apigateway-integration:
+        type: "http"
         connectionId: "brpyl9"
         httpMethod: "ANY"
         uri: "http://dvopla-d-c4fbf5eeb84045ae.elb.eu-south-1.amazonaws.com:${microservice_port}/{proxy}"
         responses:
           default:
             statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'https://d3tfwmndqvau80.cloudfront.net'"
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
-        passthroughBehavior: "when_no_match"
+        passthroughBehavior: "when_no_templates"
         connectionType: "VPC_LINK"
         cacheNamespace: "ne38fx"
         cacheKeyParameters:
         - "method.request.path.proxy"
-        type: "http_proxy"
