--- a/src/domains/example_microservice_apigateway/assets/openapi_specs/default.yaml
+++ b/src/domains/example_microservice_apigateway/assets/openapi_specs/default.yaml
@@ -59,6 +59,9 @@ paths:
               schema:
                 type: "string"
           content: {}
+        "403":
+          description: "403 response"
+          content: {}
       x-amazon-apigateway-integration:
         type: "http"
         connectionId: "${vpc_link_id}"
@@ -71,7 +74,10 @@ paths:
               method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'${cors_fqdn}'"
+          "403":
+            statusCode: "403"
         requestParameters:
+          integration.request.header.X-ApiGw-Token: "'${apigw_token}'"
           integration.request.path.proxy: "method.request.path.proxy"
         passthroughBehavior: "when_no_templates"
         connectionType: "VPC_LINK"
