--- a/.github/workflows/dev_cd_core.yml
+++ b/.github/workflows/dev_cd_core.yml
@@ -43,8 +43,8 @@ jobs:
           ecs_task_sec_group: ${{ secrets.SEC_GROUP_ID }}
           pat_token: ${{ secrets.BOT_TOKEN }}
 
-  terraform_preapply_job:
-    name: Terraform Pre Apply
+  terraform_plan_job:
+    name: Terraform Plan
     runs-on: [self-hosted, "${{ needs.create_runner.outputs.runner_name }}"]
     environment: dev-ci
     needs: create_runner
@@ -60,39 +60,23 @@ jobs:
       - name: Setup terraform
         id: setup-version
         # https://github.com/pagopa/terraform-install-action/commits/main
-        uses: pagopa/terraform-install-action@1f76f593176e58c423b88d72273a612ba7ba430b
+        uses: pagopa/eng-github-actions-iac-template/tree/main/terraform/terraform-install-action@main
 
-      - name: Terraform pre apply
-        # from https://github.com/pagopa/terraform-preapply-azure-action/commits/main
-        uses: pagopa/terraform-preapply-azure-action@2b2413f53494fc0296dde8292aeec51c36c31a5c
+      - name: Terraform plan
+        # from https://github.com/pagopa/terraform-plan-azure-action/commits/main
+        uses: pagopa/eng-github-actions-iac-template/tree/main/aws/terraform-plan-aws-action@main
         with:
-          client_id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant_id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          aws_iam_role: ${{ secrets.AWS_IAM_ROLE }}
+          aws_region: ${{ secrets.AWS_REGION }}
           dir: ${{ env.DIR }}
-          azure_environment: ${{ env.AZURE_ENVIRONMENT }}
-
-  terraform_apply_job:
-    name: Terraform Apply
-    runs-on: [self-hosted, "${{ needs.create_runner.outputs.runner_name }}"]
-    environment: dev-cd
-    needs: [create_runner, terraform_preapply_job]
-    steps:
-      - name: Terraform apply
-        # from https://github.com/pagopa/terraform-apply-azure-action/commits/main
-        uses: pagopa/terraform-apply-azure-action@5d84f089c3a0dd451ee2898280c2cd80362d113c
-        with:
-          client_id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant_id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          dir: ${{ env.DIR }}
+          aws_environment: ${{ env.AWS_ENVIRONMENT }}
 
   cleanup_runner:
     name: Cleanup Runner
     if: always()
     runs-on: ubuntu-22.04
     environment: dev-runner
-    needs: [create_runner, terraform_preapply_job, terraform_apply_job]
+    needs: [create_runner, terraform_plan_job]
     steps:
       - name: Cleanup GitHub Runner
         id: cleanup_github_runner
