--- a/.github/workflows/dev_cd_core.yml
+++ b/.github/workflows/dev_cd_core.yml
@@ -66,7 +66,7 @@ jobs:
         # from https://github.com/pagopa/terraform-plan-azure-action/commits/main
         uses: pagopa/eng-github-actions-iac-template/tree/main/aws/terraform-plan-aws-action@main
         with:
-          aws_iam_role: ${{ secrets.AWS_IAM_ROLE }}
+          aws_iam_role: ${{ secrets.AWS_IAM_ROLE_READ_ONLY }}
           aws_region: ${{ secrets.AWS_REGION }}
           dir: ${{ env.DIR }}
           aws_environment: ${{ env.AWS_ENVIRONMENT }}
