--- a/.github/workflows/dev_cd_core.yml
+++ b/.github/workflows/dev_cd_core.yml
@@ -48,15 +48,15 @@ jobs:
         run: |
           MYTEST="something"
           # echo "::set-output name=mytest::${MYTEST}"
-          echo "MYTEST=${MYTEST}" >> $GITHUB_OUTPUT
+          echo "MYTEST_OUT=${MYTEST}" >> $GITHUB_OUTPUT
       - name: test
         id: test
         shell: bash
         run: |
           echo ${{ steps.testpre.outputs.mytest }}
           echo ${{ steps.testpre.outputs.MYTEST }}
-          echo "${{ steps.testpre.outputs.mytest }}"
-          echo "${{ steps.testpre.outputs.MYTEST }}"
+          echo ${{ steps.testpre.outputs.mytest_out }}
+          echo ${{ steps.testpre.outputs.MYTEST_OUT }}
 
   terraform_plan_job:
     name: Terraform Plan
@@ -79,7 +79,7 @@ jobs:
         uses: pagopa/eng-github-actions-iac-template/terraform/terraform-install-action@main
 
       - name: Terraform plan
-        uses: pagopa/eng-github-actions-iac-template/aws/terraform-plan-aws-action@main
+        uses: pagopa/eng-github-actions-iac-template/aws/terraform-plan-aws-action@aws-actions
         with:
           aws_iam_role: ${{ secrets.AWS_IAM_ROLE_READ_ONLY }}
           aws_region: ${{ secrets.AWS_REGION }}
@@ -106,10 +106,18 @@ jobs:
         id: setup-version
         uses: pagopa/eng-github-actions-iac-template/terraform/terraform-install-action@main
 
-      - name: Terraform apply
-        uses: pagopa/eng-github-actions-iac-template/aws/terraform-apply-aws-action@main
+      - name: Terraform preapply
+        uses: pagopa/eng-github-actions-iac-template/aws/terraform-preapply-aws-action@aws-actions
         with:
-          aws_iam_role: ${{ secrets.AWS_IAM_ROLE_READ_ONLY }}
+          aws_iam_role: ${{ secrets.AWS_IAM_ROLE_ADMIN }}
+          aws_region: ${{ secrets.AWS_REGION }}
+          dir: ${{ env.DIR }}
+          aws_environment: ${{ env.AWS_ENVIRONMENT }}
+
+      - name: Terraform apply
+        uses: pagopa/eng-github-actions-iac-template/aws/terraform-apply-aws-action@aws-actions
+        with:
+          aws_iam_role: ${{ secrets.AWS_IAM_ROLE_ADMIN }}
           aws_region: ${{ secrets.AWS_REGION }}
           dir: ${{ env.DIR }}
           aws_environment: ${{ env.AWS_ENVIRONMENT }}
