--- a/.github/workflows/dev_cd_eks_platform.yml
+++ b/.github/workflows/dev_cd_eks_platform.yml
@@ -31,8 +31,7 @@ jobs:
     steps:
       - name: Create GitHub Runner
         id: create_github_runner
-        # from https://github.com/pagopa/github-self-hosted-runner-azure-create-action/commits/main
-        uses: pagopa/interop-github-runner-aws-create-action@main
+        uses: pagopa/eng-github-actions-iac-template/aws/github-self-hosted-runner-aws-create-action@aws-actions
         with:
           aws_region: ${{ secrets.AWS_REGION }}
           iam_role_arn: ${{ secrets.ECS_IAM_ROLE_ARN }}
@@ -124,7 +123,7 @@ jobs:
     steps:
       - name: Cleanup GitHub Runner
         id: cleanup_github_runner
-        uses: pagopa/interop-github-runner-aws-cleanup-action@main
+        uses: pagopa/eng-github-actions-iac-template/aws/github-self-hosted-runner-aws-cleanup-action@aws-actions
         with:
           aws_region: ${{ secrets.AWS_REGION }}
           iam_role_arn: ${{ secrets.ECS_IAM_ROLE_ARN }}
