--- a/.github/workflows/dev_cd_core.yml
+++ b/.github/workflows/dev_cd_core.yml
@@ -1,4 +1,4 @@
-name: CI on DEV core
+name: CD on DEV core
 
 on:
   workflow_dispatch:
@@ -44,9 +44,8 @@ jobs:
 
   terraform_plan_job:
     name: Terraform Plan
-    # runs-on: [self-hosted, "${{ needs.create_runner.outputs.runner_name }}"]
-    # There is a bug in needs action
-    runs-on: [self-hosted]
+    runs-on: [self-hosted, "${{ needs.create_runner.outputs.runner_name }}"]
+    # runs-on: [self-hosted]
     environment: dev-ci
     needs: create_runner
     steps:
@@ -72,10 +71,9 @@ jobs:
 
   terraform_apply_job:
     name: Terraform Apply
-    # runs-on: [self-hosted, "${{ needs.create_runner.outputs.runner_name }}"]
-    # There is a bug in needs action
-    runs-on: [self-hosted]
-    environment: dev-ci
+    runs-on: [self-hosted, "${{ needs.create_runner.outputs.runner_name }}"]
+    # runs-on: [self-hosted]
+    environment: dev-cd
     needs: [create_runner, terraform_plan_job]
     steps:
       - name: Checkout
